--- a/.github/workflows/deploy-site.yml
+++ b/.github/workflows/deploy-site.yml
@@ -38,6 +38,7 @@ jobs:
 
       - name: Deploy to gh-pages
         working-directory: scalus-site
-        run: npx gh-pages -d out -b gh-pages
+        run: |
+          npx gh-pages -d out -b gh-pages -r https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}.git
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
