fix: capture sbt exit code correctly in CI-JVM workflow

--- a/.github/workflows/ci-jvm.yml
+++ b/.github/workflows/ci-jvm.yml
@@ -28,9 +28,10 @@ jobs:
         id: build
         run: |
           nix develop .#ci --accept-flake-config --command bash -c "sbt ci-jvm" 2>&1 | tee build.log
+          BUILD_EXIT_CODE=${PIPESTATUS[0]}
           WARNINGS=$(grep -ci "warning:" build.log || echo "0")
           echo "warnings=$WARNINGS" >> $GITHUB_OUTPUT
-          exit ${PIPESTATUS[0]}
+          exit $BUILD_EXIT_CODE
       - name: Report test results
         uses: sarisia/actions-status-discord@v1
         if: always()
