js: expose script errors in a respective exception

--- a/scalus-examples/js/package.json
+++ b/scalus-examples/js/package.json
@@ -1,5 +1,5 @@
 {
   "dependencies": {
-    "scalus": "file:../../scalus-core/js/dist"
+    "scalus": "file:../../scalus-cardano-ledger/js/src/main/npm"
   }
 }
