feat(npm): add browser tests and rename bundle to scalus.js
  - Add test-browser.html and test-browser.js for browser testing
  - Update package.json with files whitelist to exclude test files from npm
  - Update README.md with accurate API examples from evaluate.ts
  - Rename bundle from scalus-cardano-ledger-opt-bundle.js to scalus.js
  - Update all references in evaluate.js, evaluate.ts, and documentation

--- a/scalus-cardano-ledger/js/src/main/npm/package.json
+++ b/scalus-cardano-ledger/js/src/main/npm/package.json
@@ -1,7 +1,12 @@
 {
   "name": "scalus",
-  "version": "0.0.2",
+  "version": "0.14.0",
   "description": "Scalus – Cardano on-chain / off-chain toolkit compiled with Scala.js",
+  "files": [
+    "scalus.js",
+    "scalus.d.ts",
+    "README.md"
+  ],
   "keywords": [
     "cardano",
     "plutus",
@@ -10,7 +15,7 @@
     "scala",
     "scalajs"
   ],
-  "main": "scalus-cardano-ledger-opt-bundle.js",
+  "main": "scalus.js",
   "types": "scalus.d.ts",
   "repository": {
     "type": "git",
