feat: add TypeScript tests for Scalus NPM package
  Add Vitest-based TypeScript tests that run during CI and can also be
  used for browser testing. Tests cover applyDataArgToScript, evaluateScript,
  SlotConfig, and evalPlutusScripts APIs.

  - Add runNpmTests sbt task and include it in ci-js alias
  - Update prepareNpmPackage to copy source maps
  - Configure webpack to output scalus.js with proper source map naming
  - Add ignoreWarnings to fix scalajs-bundler Webpack 5 compatibility
  - Create shared test functions usable in both Node.js and browser
  - Update browser tests to use shared test suite

--- a/scalus-cardano-ledger/js/src/main/npm/package.json
+++ b/scalus-cardano-ledger/js/src/main/npm/package.json
@@ -17,6 +17,17 @@
   ],
   "main": "scalus.js",
   "types": "scalus.d.ts",
+  "scripts": {
+    "test": "vitest run",
+    "test:watch": "vitest",
+    "build:browser-tests": "esbuild __tests__/shared-tests.ts --bundle --outfile=shared-tests-bundle.js --format=iife --global-name=SharedTests"
+  },
+  "devDependencies": {
+    "@types/node": "^22.0.0",
+    "esbuild": "^0.27.2",
+    "typescript": "^5.7.0",
+    "vitest": "^3.0.0"
+  },
   "repository": {
     "type": "git",
     "url": "https://github.com/nau/scalus.git"
