feat: implement Keccak-256 and SHA3-256 in pure Scala 3
  Replace Rust tiny_keccak_wrapper with pure Scala implementation.
  Cross-checked with BouncyCastle and verified against NIST/Ethereum test vectors.

--- a/scalus-examples/native/Makefile
+++ b/scalus-examples/native/Makefile
@@ -2,7 +2,7 @@ CXX=clang
 LIBSCALUS_PATH=../../scalus-core/native/target/scala-3.3.6
 CXXFLAGS=-Wall -I.
 LDFLAGS=-L$(LIBSCALUS_PATH)
-LIBS=-lsodium -lsecp256k1 -ltiny_keccak_wrapper -lc++ -lscalus
+LIBS=-lsodium -lsecp256k1 -lc++ -lscalus
 
 
 all: example
