--- a/.github/workflows/secp256k1-jni-release.yml
+++ b/.github/workflows/secp256k1-jni-release.yml
@@ -15,9 +15,9 @@ jobs:
             platform: linux_64
           - os: ubuntu-24.04-arm
             platform: linux_arm64
-          - os: macos-13
+          - os: macos-15-intel
             platform: osx_64
-          - os: macos-14
+          - os: macos-latest
             platform: osx_arm64
     runs-on: ${{ matrix.os }}
     steps:
