ci: ignore paths for scalus-secp256k1-jni and workflow files in CI configurations

--- a/.github/workflows/ci-native.yml
+++ b/.github/workflows/ci-native.yml
@@ -1,6 +1,9 @@
 name: CI-Native
 on:
   push:
+    paths-ignore:
+      - 'scalus-secp256k1-jni/**'
+      - '.github/workflows/**'
 jobs:
   test:
     runs-on: ubuntu-latest
