--- a/.github/workflows/ci-jvm.yml
+++ b/.github/workflows/ci-jvm.yml
@@ -1,6 +1,9 @@
 name: CI-JVM
 on:
   push:
+    paths-ignore:
+      - 'scalus-secp256k1-jni/**'
+      - '.github/workflows/**'
 jobs:
   test:
     runs-on: ubuntu-latest
