ci: update release workflow to ignore specific paths for unnecessary triggers

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -3,14 +3,12 @@ on:
   push:
     branches: [ master ]
     tags: [ "*" ]
-    # Only trigger release when actual code or build configuration changes
-    # Avoids unnecessary releases for docs, CI, or formatting-only commits
-    paths:
-      - 'scalus-**/**'
-      - 'bloxbean-**/**'
-      - 'bench/**'
-      - 'build.sbt'
-      - 'project/**'
+    paths-ignore:
+      - 'scalus-secp256k1-jni/**'
+      - '.github/workflows/**'
+      - '*.md'
+      - 'docs/**'
+      - 'scalus-site/**'
   workflow_dispatch: # Manual trigger as fallback
 jobs:
   publish:
