--- a/.github/workflows/secp256k1-jni-release.yml
+++ b/.github/workflows/secp256k1-jni-release.yml
@@ -44,7 +44,7 @@ jobs:
 
       - name: Build native library
         run: |
-          nix develop .#ci --accept-flake-config --command bash -c "cd scalus-secp256k1-jni && make"
+          nix develop .#ci-secp --accept-flake-config --command bash -c "cd scalus-secp256k1-jni && make"
 
       - name: Upload native library
         uses: actions/upload-artifact@v4
@@ -97,12 +97,12 @@ jobs:
 
       - name: Compile and package
         run: |
-          nix develop .#ci --accept-flake-config --command bash -c "sbt scalus-secp256k1-jni/compile scalus-secp256k1-jni/package"
+          nix develop .#ci-secp --accept-flake-config --command bash -c "sbt scalus-secp256k1-jni/compile scalus-secp256k1-jni/package"
 
       - name: Publish to Sonatype
         if: startsWith(github.ref, 'refs/tags/')
         run: |
-          nix develop .#ci --accept-flake-config --command bash -c "sbt scalus-secp256k1-jni/ci-release"
+          nix develop .#ci-secp --accept-flake-config --command bash -c "sbt scalus-secp256k1-jni/ci-release"
         env:
           PGP_PASSPHRASE: ${{ secrets.PGP_PASSPHRASE }}
           PGP_SECRET: ${{ secrets.PGP_SECRET }}
