--- a/.github/workflows/secp256k1-jni-release.yml
+++ b/.github/workflows/secp256k1-jni-release.yml
@@ -30,15 +30,13 @@ jobs:
         with:
           fetch-depth: 0
 
-      - uses: cachix/install-nix-action@v25
+      - uses: DeterminateSystems/nix-installer-action@main
         with:
-          nix_path: nixpkgs=channel:nixos-unstable
-          extra_nix_config: |
+          extra-conf: |
             trusted-public-keys = cache.nixos.org-1:6NCHdD59X431o0gWypbMrAURkbJ16ZPMQFGspcDShjY= iohk.cachix.org-1:DpRUyj7h7V830dp/i6Nti+NEO2/nhblbov/8MW7Rqoo= nix-community.cachix.org-1:mB9FSh9qf2dCimDSUo8Zy7bkq5CX+/rkCWyvRCYg3Fs=
             substituters = https://cache.iog.io https://cache.nixos.org/ https://iohk.cachix.org https://nix-community.cachix.org
             accept-flake-config = true
             allow-import-from-derivation = true
-            experimental-features = nix-command flakes
 
       - uses: DeterminateSystems/magic-nix-cache-action@main
 
@@ -64,15 +62,13 @@ jobs:
         with:
           fetch-depth: 0
 
-      - uses: cachix/install-nix-action@v25
+      - uses: DeterminateSystems/nix-installer-action@main
         with:
-          nix_path: nixpkgs=channel:nixos-unstable
-          extra_nix_config: |
+          extra-conf: |
             trusted-public-keys = cache.nixos.org-1:6NCHdD59X431o0gWypbMrAURkbJ16ZPMQFGspcDShjY= iohk.cachix.org-1:DpRUyj7h7V830dp/i6Nti+NEO2/nhblbov/8MW7Rqoo= nix-community.cachix.org-1:mB9FSh9qf2dCimDSUo8Zy7bkq5CX+/rkCWyvRCYg3Fs=
             substituters = https://cache.iog.io https://cache.nixos.org/ https://iohk.cachix.org https://nix-community.cachix.org
             accept-flake-config = true
             allow-import-from-derivation = true
-            experimental-features = nix-command flakes
 
       - uses: DeterminateSystems/magic-nix-cache-action@main
 
