--- a/.github/workflows/secp256k1-jni-release.yml
+++ b/.github/workflows/secp256k1-jni-release.yml
@@ -95,12 +95,18 @@ jobs:
         run: |
           nix develop .#ci-secp --accept-flake-config --command bash -c "sbt scalus-secp256k1-jni/package"
 
+      - name: Import GPG key
+        if: startsWith(github.ref, 'refs/tags/')
+        run: |
+          echo "$PGP_SECRET" | base64 --decode | gpg --batch --import
+        env:
+          PGP_SECRET: ${{ secrets.PGP_SECRET }}
+
       - name: Publish to Sonatype
         if: startsWith(github.ref, 'refs/tags/')
         run: |
           nix develop .#ci-secp --accept-flake-config --command bash -c "sbt 'scalus-secp256k1-jni/publishSigned; sonatypeBundleRelease'"
         env:
           PGP_PASSPHRASE: ${{ secrets.PGP_PASSPHRASE }}
-          PGP_SECRET: ${{ secrets.PGP_SECRET }}
           SONATYPE_PASSWORD: ${{ secrets.SONATYPE_PASSWORD }}
           SONATYPE_USERNAME: ${{ secrets.SONATYPE_USERNAME }}
