--- a/.github/workflows/secp256k1-jni-release.yml
+++ b/.github/workflows/secp256k1-jni-release.yml
@@ -9,7 +9,7 @@ on:
 jobs:
   build-native:
     strategy:
-      max-parallel: 1
+      max-parallel: 2
       matrix:
         include:
           - os: ubuntu-latest
@@ -105,7 +105,7 @@ jobs:
       - name: Publish to Sonatype
         if: startsWith(github.ref, 'refs/tags/')
         run: |
-          nix develop .#ci-secp --accept-flake-config --command bash -c "sbt 'scalus-secp256k1-jni/publishSigned; sonatypeCentralUpload'"
+          nix develop .#ci-secp --accept-flake-config --command bash -c "sbt 'scalus-secp256k1-jni/publishSigned; scalus-secp256k1-jni/sonaRelease'"
         env:
           PGP_PASSPHRASE: ${{ secrets.PGP_PASSPHRASE }}
           SONATYPE_PASSWORD: ${{ secrets.SONATYPE_PASSWORD }}
