--- a/.github/workflows/secp256k1-jni-release.yml
+++ b/.github/workflows/secp256k1-jni-release.yml
@@ -105,7 +105,8 @@ jobs:
       - name: Publish to Sonatype
         if: startsWith(github.ref, 'refs/tags/')
         run: |
-          nix develop .#ci-secp --accept-flake-config --command bash -c "sbt 'scalus-secp256k1-jni/publishSigned; scalus-secp256k1-jni/sonaRelease'"
+          rm -rf target/sona-staging
+          nix develop .#ci-secp --accept-flake-config --command bash -c "sbt 'scalus-secp256k1-jni/publishSigned; sonaRelease'"
         env:
           PGP_PASSPHRASE: ${{ secrets.PGP_PASSPHRASE }}
           SONATYPE_PASSWORD: ${{ secrets.SONATYPE_PASSWORD }}
