--- a/.github/workflows/secp256k1-jni-release.yml
+++ b/.github/workflows/secp256k1-jni-release.yml
@@ -9,7 +9,7 @@ on:
 jobs:
   build-native:
     strategy:
-      max-parallel: 2
+      max-parallel: 4
       matrix:
         include:
           - os: ubuntu-latest
@@ -30,13 +30,7 @@ jobs:
         with:
           fetch-depth: 0
 
-      - uses: DeterminateSystems/nix-installer-action@main
-        with:
-          extra-conf: |
-            trusted-public-keys = cache.nixos.org-1:6NCHdD59X431o0gWypbMrAURkbJ16ZPMQFGspcDShjY= iohk.cachix.org-1:DpRUyj7h7V830dp/i6Nti+NEO2/nhblbov/8MW7Rqoo= nix-community.cachix.org-1:mB9FSh9qf2dCimDSUo8Zy7bkq5CX+/rkCWyvRCYg3Fs=
-            substituters = https://cache.iog.io https://cache.nixos.org/ https://iohk.cachix.org https://nix-community.cachix.org
-            accept-flake-config = true
-            allow-import-from-derivation = true
+      - uses: nixbuild/nix-quick-install-action@v34
 
       - uses: DeterminateSystems/magic-nix-cache-action@main
 
@@ -62,13 +56,7 @@ jobs:
         with:
           fetch-depth: 0
 
-      - uses: DeterminateSystems/nix-installer-action@main
-        with:
-          extra-conf: |
-            trusted-public-keys = cache.nixos.org-1:6NCHdD59X431o0gWypbMrAURkbJ16ZPMQFGspcDShjY= iohk.cachix.org-1:DpRUyj7h7V830dp/i6Nti+NEO2/nhblbov/8MW7Rqoo= nix-community.cachix.org-1:mB9FSh9qf2dCimDSUo8Zy7bkq5CX+/rkCWyvRCYg3Fs=
-            substituters = https://cache.iog.io https://cache.nixos.org/ https://iohk.cachix.org https://nix-community.cachix.org
-            accept-flake-config = true
-            allow-import-from-derivation = true
+      - uses: nixbuild/nix-quick-install-action@v34
 
       - uses: DeterminateSystems/magic-nix-cache-action@main
 
@@ -106,7 +94,7 @@ jobs:
         if: startsWith(github.ref, 'refs/tags/')
         run: |
           rm -rf target/sona-staging
-          nix develop .#ci-secp --accept-flake-config --command bash -c "sbt 'scalus-secp256k1-jni/publishSigned; sonaRelease'"
+          nix develop .#ci-secp --accept-flake-config --command bash -c "sbt 'set ThisBuild / isSnapshot := false; scalus-secp256k1-jni/publishSigned; sonaRelease'"
         env:
           PGP_PASSPHRASE: ${{ secrets.PGP_PASSPHRASE }}
           SONATYPE_PASSWORD: ${{ secrets.SONATYPE_PASSWORD }}
