--- a/.github/workflows/secp256k1-jni-release.yml
+++ b/.github/workflows/secp256k1-jni-release.yml
@@ -81,21 +81,13 @@ jobs:
 
       - name: Compile and package
         run: |
-          nix develop .#ci-secp --accept-flake-config --command bash -c "sbt scalus-secp256k1-jni/package"
-
-      - name: Import GPG key
-        if: startsWith(github.ref, 'refs/tags/')
-        run: |
-          echo "$PGP_SECRET" | base64 --decode | gpg --batch --import
-        env:
-          PGP_SECRET: ${{ secrets.PGP_SECRET }}
+          nix develop .#ci-secp --accept-flake-config --command bash -c "cd scalus-secp256k1-jni && sbt package"
 
       - name: Publish to Sonatype
-        if: startsWith(github.ref, 'refs/tags/')
         run: |
-          rm -rf target/sona-staging
-          nix develop .#ci-secp --accept-flake-config --command bash -c "sbt 'set ThisBuild / isSnapshot := false; scalus-secp256k1-jni/publishSigned; sonaRelease'"
+          nix develop .#ci-secp --accept-flake-config --command bash -c "cd scalus-secp256k1-jni && sbt ci-release"
         env:
           PGP_PASSPHRASE: ${{ secrets.PGP_PASSPHRASE }}
+          PGP_SECRET: ${{ secrets.PGP_SECRET }}
           SONATYPE_PASSWORD: ${{ secrets.SONATYPE_PASSWORD }}
           SONATYPE_USERNAME: ${{ secrets.SONATYPE_USERNAME }}
