--- a/.github/workflows/ci-js.yml
+++ b/.github/workflows/ci-js.yml
@@ -27,6 +27,8 @@ jobs:
             allow-import-from-derivation = true
             experimental-features = nix-command flakes
       - uses: DeterminateSystems/magic-nix-cache-action@main
+        with:
+          use-flakehub: false
       - name: Build and test in Nix devshell
         run: nix develop .#ci --accept-flake-config --command bash -c "sbt ci-js"
       - name: Report test results
