--- a/.github/workflows/ci-jvm.yml
+++ b/.github/workflows/ci-jvm.yml
@@ -27,6 +27,8 @@ jobs:
             allow-import-from-derivation = true
             experimental-features = nix-command flakes
       - uses: DeterminateSystems/magic-nix-cache-action@main
+        with:
+          use-flakehub: false
       - name: Build and test in Nix devshell
         id: build
         run: |
