--- a/.github/workflows/secp256k1-jni-release.yml
+++ b/.github/workflows/secp256k1-jni-release.yml
@@ -33,6 +33,8 @@ jobs:
       - uses: nixbuild/nix-quick-install-action@v34
 
       - uses: DeterminateSystems/magic-nix-cache-action@main
+        with:
+          use-flakehub: false
 
       - name: Build native library
         run: |
@@ -59,6 +61,8 @@ jobs:
       - uses: nixbuild/nix-quick-install-action@v34
 
       - uses: DeterminateSystems/magic-nix-cache-action@main
+        with:
+          use-flakehub: false
 
       - name: Download all native libraries
         uses: actions/download-artifact@v4
