--- a/.github/workflows/ci-js.yml
+++ b/.github/workflows/ci-js.yml
@@ -17,6 +17,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
+      - uses: coursier/cache-action@v6
       - uses: cachix/install-nix-action@v25
         with:
           nix_path: nixpkgs=channel:nixos-unstable
