--- a/.github/workflows/it.yml
+++ b/.github/workflows/it.yml
@@ -17,9 +17,10 @@ jobs:
       id-token: write
     steps:
       - name: Checkout
-        uses: actions/checkout@v5
+        uses: actions/checkout@v4
         with:
           fetch-depth: 0
+      - uses: coursier/cache-action@v6
       - name: Download data
         uses: robinraju/release-downloader@v1
         with:
