ci: speed up nix devshell evaluation from ~90s to ~5s
  Use builtins.fetchClosure to fetch pre-built uplc binary directly from
  cache.iog.io, avoiding slow haskell-nix evaluation in CI. Fetch
  plutus-conformance test data via fetchTarball from GitHub.

  - Add uplcCached and plutusConformanceSrc to flake.nix for CI shell
  - Enable fetch-closure experimental feature in CI workflows
  - Add Coursier caching to all CI workflows
  - Switch ci-jvm to nix-quick-install-action for faster setup
  - Add workflow_dispatch to ci-jvm for manual runs
  - Increase secp256k1-jni build parallelism to 4
  - Document Plutus update process in CONTRIBUTING.md

--- a/.github/workflows/ci-jvm.yml
+++ b/.github/workflows/ci-jvm.yml
@@ -19,6 +19,11 @@ jobs:
           fetch-depth: 0
       - uses: coursier/cache-action@v6
       - uses: nixbuild/nix-quick-install-action@v34
+        with:
+          nix_conf: |
+            extra-experimental-features = fetch-closure
+            extra-substituters = https://cache.iog.io
+            extra-trusted-public-keys = hydra.iohk.io:f/Ea+s+dFdN+3Y/G+FDgSq+a5NEWhJGzdjvKNGv0/EQ=
       - uses: DeterminateSystems/magic-nix-cache-action@main
         with:
           use-flakehub: false
