--- a/.github/workflows/ci-jvm.yml
+++ b/.github/workflows/ci-jvm.yml
@@ -22,6 +22,9 @@ jobs:
       - uses: DeterminateSystems/magic-nix-cache-action@main
         with:
           use-flakehub: false
+      - name: Get Linux uplc path (temporary - remove after getting path)
+        run: |
+          nix build github:IntersectMBO/plutus/1.56.0.0#uplc --print-out-paths
       - name: Build and test in Nix devshell
         id: build
         run: |
