ci: speed up nix devshell evaluation from ~90s to ~5s
Use builtins.fetchClosure to fetch pre-built uplc binary directly from
cache.iog.io, avoiding slow haskell-nix evaluation in CI. Fetch plutus-conformance test data via fetchTarball from GitHub.

- Add uplcCached and plutusConformanceSrc to flake.nix for CI shell
- Enable fetch-closure experimental feature in CI workflows

--- a/.github/workflows/it.yml
+++ b/.github/workflows/it.yml
@@ -76,7 +76,7 @@ jobs:
             substituters = https://cache.iog.io https://cache.nixos.org/ https://iohk.cachix.org https://nix-community.cachix.org
             accept-flake-config = true
             allow-import-from-derivation = true
-            experimental-features = nix-command flakes
+            experimental-features = nix-command flakes fetch-closure
       - uses: DeterminateSystems/magic-nix-cache-action@main
         with:
           use-flakehub: false
