--- a/.github/workflows/ci-jvm.yml
+++ b/.github/workflows/ci-jvm.yml
@@ -19,12 +19,16 @@ jobs:
           fetch-depth: 0
       - uses: coursier/cache-action@v6
       - uses: nixbuild/nix-quick-install-action@v34
+        with:
+          nix_conf: |
+            trusted-public-keys = cache.nixos.org-1:6NCHdD59X431o0gWypbMrAURkbJ16ZPMQFGspcDShjY= hydra.iohk.io:f/Ea+s+dFdN+3Y/G+FDgSq+a5NEWhJGzdjvKNGv0/EQ= iohk.cachix.org-1:DpRUyj7h7V830dp/i6Nti+NEO2/nhblbov/8MW7Rqoo= nix-community.cachix.org-1:mB9FSh9qf2dCimDSUo8Zy7bkq5CX+/rkCWyvRCYg3Fs=
+            substituters = https://cache.iog.io https://cache.nixos.org/ https://iohk.cachix.org https://nix-community.cachix.org
+            accept-flake-config = true
+            allow-import-from-derivation = true
+            experimental-features = nix-command flakes fetch-closure
       - uses: DeterminateSystems/magic-nix-cache-action@main
         with:
           use-flakehub: false
-      - name: Get Linux uplc path (temporary - remove after getting path)
-        run: |
-          nix build github:IntersectMBO/plutus/1.56.0.0#uplc --print-out-paths
       - name: Build and test in Nix devshell
         id: build
         run: |
