--- a/scalus-site/package.json
+++ b/scalus-site/package.json
@@ -1,20 +1,21 @@
 {
   "name": "scalus-site",
   "version": "1.0.0",
+  "packageManager": "pnpm@10.28.1",
   "main": "index.js",
   "license": "MIT",
   "nextra": "nextra-theme-docs",
   "dependencies": {
-    "@next/third-parties": "^16.0.7",
-    "@tailwindcss/postcss": "^4.1.17",
-    "next": "^16.0.7",
+    "@next/third-parties": "^16.1.3",
+    "@tailwindcss/postcss": "^4.1.18",
+    "next": "^16.1.3",
     "next-sitemap": "^4.2.3",
     "nextra": "4.6.1",
     "nextra-theme-docs": "4.6.1",
     "postcss": "^8.5.6",
-    "react": "^19.2.1",
-    "react-dom": "^19.2.1",
-    "tailwindcss": "^4.1.17"
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
+    "tailwindcss": "^4.1.18"
   },
   "scripts": {
     "dev": "next dev",
