docs: add Scalus Starter tutorial and redirect generation script
Add comprehensive tutorial for building a token minting DApp covering
smart contracts, transaction building, REST API, and testing.

--- a/scalus-site/package.json
+++ b/scalus-site/package.json
@@ -21,7 +21,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "postbuild": "next-sitemap & pagefind --site .next/server/app --output-path out/_pagefind"
+    "postbuild": "next-sitemap && pagefind --site .next/server/app --output-path out/_pagefind && node scripts/generate-redirects.mjs"
   },
   "devDependencies": {
     "gh-pages": "^6.3.0",
