chore: remove .cursor and todo files from tracking
Add .cursor/ and **/todo/ to .gitignore to keep these local-only.

--- a/.gitignore
+++ b/.gitignore
@@ -31,6 +31,8 @@ website/static/api
 node_modules
 .scala-build
 .envrc.local
+.cursor/
+**/todo/
 *.log
 test-logs-archive/
 /scalus-cardano-ledger/js/src/main/npm/scalus.js.map
