--- a/.github/workflows/deploy-site.yml
+++ b/.github/workflows/deploy-site.yml
@@ -28,9 +28,13 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '20'
-          cache: 'yarn'
-          cache-dependency-path: scalus-site/yarn.lock
+          node-version: '22'
+
+      - name: Setup pnpm
+        uses: pnpm/action-setup@v4
+        with:
+          version: 10
+          run_install: false
 
       - name: Setup Java (for Scaladoc generation)
         if: inputs.api_mode == 'regenerate'
@@ -64,11 +68,11 @@ jobs:
 
       - name: Install dependencies
         working-directory: scalus-site
-        run: yarn install --frozen-lockfile
+        run: pnpm install --frozen-lockfile
 
       - name: Build site (Next.js copies public/ to out/)
         working-directory: scalus-site
-        run: yarn build
+        run: pnpm build
 
       - name: Configure git
         run: |
