fix: correct GitHub Actions output format for warnings count
grep -c outputs "0" and returns exit code 1 when no matches found.
The || echo "0" caused both outputs to be captured, resulting in
"0\n0" which is an invalid GitHub output format.

--- a/.github/workflows/ci-jvm.yml
+++ b/.github/workflows/ci-jvm.yml
@@ -27,7 +27,7 @@ jobs:
         run: |
           nix develop .#ci --accept-flake-config --command bash -c "sbt ci-jvm" 2>&1 | tee build.log
           BUILD_EXIT_CODE=${PIPESTATUS[0]}
-          WARNINGS=$(grep -ci "warning:" build.log || echo "0")
+          WARNINGS=$(grep -ci "warning:" build.log) || WARNINGS=0
           echo "warnings=$WARNINGS" >> $GITHUB_OUTPUT
           exit $BUILD_EXIT_CODE
       - name: Report test results
