--- a/scalus-cardano-ledger/js/src/main/npm/package.json
+++ b/scalus-cardano-ledger/js/src/main/npm/package.json
@@ -24,6 +24,7 @@
   },
   "devDependencies": {
     "@types/node": "^22.0.0",
+    "cbor-x": "^1.6.0",
     "esbuild": "^0.27.2",
     "typescript": "^5.7.0",
     "vitest": "^3.0.0"
