ci: pin release workflow to ubuntu-22.04
ubuntu-latest now resolves to 24.04 where GPG 2.4.4 gpg-agent
breaks batch signing in sbt-ci-release.

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -12,7 +12,7 @@ on:
   workflow_dispatch: # Manual trigger as fallback
 jobs:
   publish:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     timeout-minutes: 40
     permissions:
       contents: read
